[gd_scene load_steps=9 format=3 uid="uid://cpsnr3nhgbl5n"]

[ext_resource type="Script" uid="uid://dj37oetrd4lmr" path="res://Scripts/Interactable/revealable_platform.gd" id="1_cijhk"]
[ext_resource type="Texture2D" uid="uid://c7mjdck7bu70e" path="res://Art/Palm Tree Island/Sprites/Objects/Ship Helm/Ship Helm Idle 01.png" id="2_8p23g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_18l2h"]
size = Vector2(18, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jch3"]
size = Vector2(30, 32)

[sub_resource type="Animation" id="Animation_asmee"]
resource_name = "FadeIn"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_p4dxa"]
resource_name = "FadeOut"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_l4p36"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8gw4y"]
_data = {
&"FadeIn": SubResource("Animation_asmee"),
&"FadeOut": SubResource("Animation_p4dxa"),
&"RESET": SubResource("Animation_l4p36")
}

[node name="RevealablePlatform" type="StaticBody2D"]
script = ExtResource("1_cijhk")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("2_8p23g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_18l2h")

[node name="Area2D" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_7jch3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8gw4y")
}

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
